# ai-engine

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
services/ai_engine/: Dockerfile  pyproject.toml
services/ai_engine/src/ai_engine/: main.py
services/ai_engine/src/ai_engine/application/: __init__.py
services/ai_engine/src/ai_engine/application/dto/: __init__.py  processing_dto.py
services/ai_engine/src/ai_engine/application/services/: __init__.py  processing_service.py
services/ai_engine/src/ai_engine/domain/: __init__.py
services/ai_engine/src/ai_engine/domain/entities/: __init__.py  llm_config.py  prompt_template.py
services/ai_engine/src/ai_engine/domain/events/: __init__.py
services/ai_engine/src/ai_engine/domain/repositories/: __init__.py  llm_config_repository.py  prompt_template_repository.py
services/ai_engine/src/ai_engine/domain/services/: __init__.py  llm_selector.py
services/ai_engine/src/ai_engine/domain/value_objects/: __init__.py  model_name.py  provider.py
services/ai_engine/src/ai_engine/infrastructure/: __init__.py
services/ai_engine/src/ai_engine/infrastructure/cache/: __init__.py
services/ai_engine/src/ai_engine/infrastructure/llm/: __init__.py  agent_nodes.py  agent_state.py  langgraph_runner.py  llm_factory.py
services/ai_engine/src/ai_engine/infrastructure/messaging/: __init__.py
services/ai_engine/src/ai_engine/infrastructure/persistence/: __init__.py  database.py  llm_config_repository_impl.py  models.py  prompt_template_repository_impl.py  unit_of_work.py
services/ai_engine/src/ai_engine/interface/dto/: __init__.py
services/ai_engine/src/ai_engine/interface/handlers/: __init__.py  message_handler.py
services/commerce-agent/: Dockerfile  pyproject.toml
services/commerce-agent/src/commerce_agent/: __init__.py  main.py  worker.py
services/commerce-agent/src/commerce_agent/application/: __init__.py
services/commerce-agent/src/commerce_agent/application/dto/: __init__.py  message_dto.py  product_dto.py  quick_reply_dto.py  tenant_dto.py
services/commerce-agent/src/commerce_agent/application/handlers/: __init__.py  wa_message_handler.py
services/commerce-agent/src/commerce_agent/application/services/: __init__.py  chatbot_orchestrator.py  conversation_service.py  customer_service.py  label_service.py  order_service.py  quick_reply_service.py
services/commerce-agent/src/commerce_agent/domain/: __init__.py
services/commerce-agent/src/commerce_agent/domain/entities/: __init__.py  conversation.py  customer.py  label.py  order.py  payment.py  product.py  quick_reply.py  tenant.py  ticket.py
services/commerce-agent/src/commerce_agent/domain/events/: __init__.py  conversation_events.py  customer_events.py  label_events.py  order_events.py  payment_events.py  product_events.py  tenant_events.py  ticket_events.py
services/commerce-agent/src/commerce_agent/domain/repositories/: __init__.py  conversation_repository.py  customer_repository.py  label_repository.py  order_repository.py  payment_repository.py  product_repository.py  quick_reply_repository.py  tenant_repository.py  ticket_repository.py
services/commerce-agent/src/commerce_agent/domain/value_objects/: __init__.py  customer_id.py  money.py  product_id.py  ticket_id.py  ticket_priority.py  ticket_status.py
services/commerce-agent/src/commerce_agent/infrastructure/: __init__.py
services/commerce-agent/src/commerce_agent/infrastructure/cache/: __init__.py  conversation_cache.py  message_buffer.py  message_dedup.py
services/commerce-agent/src/commerce_agent/infrastructure/llm/: __init__.py  crm_langgraph_runner.py
services/commerce-agent/src/commerce_agent/infrastructure/location/: __init__.py  geocoding_client.py  location_extractor.py
services/commerce-agent/src/commerce_agent/infrastructure/messaging/: __init__.py  buffer_flush_worker.py  crm_task_consumer.py  wa_response_publisher.py
services/commerce-agent/src/commerce_agent/infrastructure/payment/: __init__.py  xendit_client.py
services/commerce-agent/src/commerce_agent/infrastructure/persistence/: __init__.py  conversation_repository_impl.py  customer_repository_impl.py  database.py  label_repository_impl.py  models.py  order_repository_impl.py  payment_repository_impl.py  product_repository_impl.py  quick_reply_repository_impl.py  tenant_repository_impl.py
services/commerce-agent/src/commerce_agent/infrastructure/utils/: __init__.py
services/commerce-agent/src/commerce_agent/interface/: __init__.py
services/commerce-agent/src/commerce_agent/interface/controllers/: __init__.py  label_controller.py  order_controller.py  product_controller.py  quick_reply_controller.py  tenant_controller.py  webhook_controller.py
services/commerce-agent/src/commerce_agent/interface/routes/: __init__.py  api.py
services/crm_chatbot/: Dockerfile  pyproject.toml
services/crm_chatbot/src/crm_chatbot/: main.py
services/crm_chatbot/src/crm_chatbot/application/dto/: __init__.py  customer_dto.py  label_dto.py  message_dto.py  order_dto.py
services/crm_chatbot/src/crm_chatbot/application/handlers/: __init__.py  wa_message_handler.py
services/crm_chatbot/src/crm_chatbot/application/services/: __init__.py  chatbot_orchestrator.py  conversation_service.py  customer_service.py  label_service.py  order_service.py  quick_reply_service.py
services/crm_chatbot/src/crm_chatbot/domain/: __init__.py
services/crm_chatbot/src/crm_chatbot/domain/entities/: __init__.py  conversation.py  customer.py  label.py  order.py  payment.py  product.py  quick_reply.py  (+2 more)
services/crm_chatbot/src/crm_chatbot/infrastructure/: __init__.py
services/crm_chatbot/src/crm_chatbot/interface/: __init__.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/gateway/: __init__.py  main.py
services/gateway/src/gateway/application/: __init__.py
services/gateway/src/gateway/crm/: __init__.py  dependencies.py  publishers.py
services/gateway/src/gateway/domain/: __init__.py
services/gateway/src/gateway/infrastructure/: __init__.py
services/gateway/src/gateway/interface/: __init__.py
(+200 files in other folders)
