[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-platform-engine"
version = "0.1.0"
description = "AI Engine service - Worker consuming RabbitMQ, running LangGraph pipelines"
dependencies = [
    # Core (inherited from root)
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",

    # Messaging
    "aio-pika>=9.4.0",

    # Cache
    "redis>=5.0.0",

    # AI/ML
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.0.40",

    # Logging
    "structlog>=24.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ai_engine"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.isort]
known-first-party = ["shared", "ai_engine"]
