[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-platform-commerce-agent"
version = "0.1.0"
description = "WhatsApp-based customer chatbot service with multi-tenant CRM"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",

    # Messaging
    "aio-pika>=9.4.0",

    # Cache
    "redis>=5.0.0",

    # HTTP Client
    "httpx>=0.25.0",

    # AI/ML
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["commerce_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.isort]
known-first-party = ["shared", "commerce_agent", "llm_worker"]
