[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-platform-gateway"
version = "0.1.0"
description = "Gateway service - REST API for job submission and status"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Core (inherited from root)
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",

    # Messaging
    "aio-pika>=9.4.0",

    # Cache
    "redis>=5.0.0",

    # Logging
    "structlog>=24.1.0",

    # CRM Integration Dependencies
    # HTTP Client
    "httpx>=0.25.0",

    # AI/ML (shared types with CRM)
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.isort]
known-first-party = ["shared", "gateway", "commerce_agent", "llm_worker"]
